--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 	<script src="assets/js/angular/angular.min.js"></script>
     <script src="assets/js/angular/angular-route.min.js"></script>
+    <script src="assets/js/angular/ui-bootstrap-custom-tpls-1.3.2.min.js"></script>
+     <!-- // <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.2.js"></script> -->
     <script src="assets/js/app.js"></script>
     <script src="assets/js/services.js"></script>
     <script src="assets/js/controllers.js"></script>
@@ -30,7 +32,6 @@
 	        <a class="menu-heading" href="#/">BBC Test</a>
 	        <ul class="menu-list">
 	            <li class="menu-item pure-menu-selected"><a href="#/listing">Listings</a></li>
-	            <li class="menu-item pure-menu-selected"><a href="#/listing/a">Listing Details</a></li>
 	        </ul>
 		</header>
 	</nav>
@@ -42,10 +43,6 @@
 
 <!-- todo:
 	
-	-) Commit - but ignore tests on heroku
-	-) Commit after chaning app name to bbcListings - COMMIT ALL
-	-) tests
-	-) recipe size option - use ngstyle to set width to that of the image
 	-) pagination
 	-) sidebar as directive
 	-) restructure service
