--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Ian Cottam - BBC Test</title>
+	<title>BBC Test</title>
 
 	<!-- fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic,300,300italic' rel='stylesheet' type='text/css'>
+
+	<!-- styles -->
 	<link rel="stylesheet" href="/assets/css/vendor/pure.css">
 	<link rel="stylesheet" href="/assets/css/vendor/pure-grid.css">
 
 	<link rel="stylesheet" href="assets/css/screen.css">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
+	<!-- scripts -->
 	<script src="assets/js/angular/angular.min.js"></script>
     <script src="assets/js/angular/angular-route.min.js"></script>
     <script src="assets/js/angular/ui-bootstrap-custom-tpls-1.3.2.min.js"></script>
-     <!-- // <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.2.js"></script> -->
     <script src="assets/js/app.js"></script>
     <script src="assets/js/services.js"></script>
     <script src="assets/js/controllers.js"></script>
@@ -36,15 +38,5 @@
 		</header>
 	</nav>
 	<div ng-view></div>
-	<!-- // <script src="/assets/js/vendor/require.js" data-main="../assets/js/app"></script> -->
 </body>
 </html>
-
-
-<!-- todo:
-	
-	-) pagination
-	-) sidebar as directive
-	-) restructure service
-
- -->
